fixed download for small screens

--- a/index.html
+++ b/index.html
@@ -84,8 +84,9 @@
                                 <h3 class="home__profession">ROBOTICS ENGINEER</h3>
                                 
                                 <div>
-                                    <a download="" href="assets/pdf/ResumeCv.pdf" class="home__button-movil"> Download</a>
+                                    <a download="" href="" class="home__button-movil" id="download-button"> Download</a>
                                 </div>
+                                
                             </div>
 
                             <div class="home__address bd-grid">
