--- a/index.html
+++ b/index.html
@@ -320,7 +320,39 @@
                             <div class="project__content">
                                 <h3 class="project__title">
                                     <span class="project_rounder"></span>
-                                    <span class="rus"></span>
+                                    <span class="rus">НИР "Разработка и экспериментальная апробация алгоритма и процедуры идентификации и синтеза основанных на данных динамических моделей манипуляционных роботов для систем силомоментного управления"</span>
+                                </h3>
+                                <!-- <p class="certificate__description">For meeting the expectations of leading the team to work the specified tasks in the labor field.</p> -->
+                            </div>
+
+                            <div class="project__content">
+                                <h3 class="project__title">
+                                    <span class="project_rounder"></span>
+                                    <span class="rus">НИР "Исследование композитных обучаемых гибридных моделей и алгоритмов сенсорно-моторной координации в задачах манипулирования в динамических средах"</span>
+                                </h3>
+                                <!-- <p class="certificate__description">For meeting the expectations of leading the team to work the specified tasks in the labor field.</p> -->
+                            </div>
+
+                            <div class="project__content">
+                                <h3 class="project__title">
+                                    <span class="project_rounder"></span>
+                                    <span class="rus">Разработка программы управления роботом-манипулятором UFACTORY xArm 6 для безмаркерной, автоматической коммутации разъема с использованием машинного зрения на основе камеры Intel Realsense D435</span>
+                                </h3>
+                                <!-- <p class="certificate__description">For meeting the expectations of leading the team to work the specified tasks in the labor field.</p> -->
+                            </div>
+
+                            <div class="project__content">
+                                <h3 class="project__title">
+                                    <span class="project_rounder"></span>
+                                    <span class="rus">НИР "Технологии воплощенного интеллекта в робототехнике"</span>
+                                </h3>
+                                <!-- <p class="certificate__description">For meeting the expectations of leading the team to work the specified tasks in the labor field.</p> -->
+                            </div>
+
+                            <div class="project__content">
+                                <h3 class="project__title">
+                                    <span class="project_rounder"></span>
+                                    <span class="rus">НИР "Методы искусственного интеллекта для киберфизических систем"</span>
                                 </h3>
                                 <!-- <p class="certificate__description">For meeting the expectations of leading the team to work the specified tasks in the labor field.</p> -->
                             </div>
