--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                         </h2>
 
                         <p class="profile__description"> 
-                            <span class="rus">Я студент 4-го курса в университете ИТМО на программе "Робототехника и ИИ", с первого курса активно принимаю участие в научной и проектной деятельности университета. Моя деятельность охватывает такие сферы как: разработка систем управления, решение задач интеллектульной робототехники, ML и другие   </span>
+                            <span class="rus">Я студент 4-го курса бакалавриата в университете ИТМО на программе "Робототехника и ИИ", с первого курса активно принимаю участие в научной и проектной деятельности университета. Моя деятельность охватывает такие сферы как: разработка систем управления, решение задач интеллектульной робототехники, ML и другие   </span>
 <!--                             <span class="eng">I am a person, responsible with their work during working hours. Finish various technical and higher studies at large universities. I have several years of experience and achievements in the labor field.</p></span> -->
                         </p>
                     </section>
